--- a/vercel.json
+++ b/vercel.json
@@ -2,27 +2,13 @@
   "buildCommand": "echo 'Static site - no build needed'",
   "installCommand": "npm install",
   "outputDirectory": ".",
-  "functions": {
-    "api/**/*.js": {
-      "runtime": "nodejs18.x"
-    }
-  },
   "rewrites": [
     {
-      "source": "/api/(.*)",
-      "destination": "/api/$1"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ],
   "headers": [
-    {
-      "source": "/api/(.*)",
-      "headers": [
-        {
-          "key": "Content-Type",
-          "value": "application/json"
-        }
-      ]
-    },
     {
       "source": "/(.*)",
       "headers": [
